2005-08-30  Sven Herzberg  <herzi@gnome-de.org>

	* gnome-mouse-properties.c: listen to the XCURSOR_PATH environment
	variable (Closes: #312534).

2005-08-24  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-mouse-properties.c: (cursor_changed): Move the call to
	g_free (cursor_font) outside of the conditional so it gets free'd
	in both cases.

2005-08-01  Sebastien Bacher  <seb128@debian.org>

	* gnome-mouse-properties.c: (cursor_theme_changed): no need to allocate
	a string for the theme when there is no theme installed.

2005-08-01  Sebastien Bacher  <seb128@debian.org>

	* gnome-mouse-properties.c: (cursor_theme_changed):
	don't crash if there is no cursor theme installed (Closes: #311599).

2005-07-31  Sebastien Bacher  <seb128@debian.org>

	* gnome-mouse-properties.c: (delay_value_changed_cb),
	(setup_dialog): 
	update dynamically the double click label (Closes: #166908).

2005-07-31  Sebastien Bacher  <seb128@debian.org>

	* gnome-mouse-properties.glade: 
	update of the glade file, no need to restart the session to apply 
	the changes with GTK 2.8 (Closes: #312070).

2005-07-12  Sven Herzberg  <herzi@gnome-de.org>

	* gnome-mouse-properties.c: fix the without HAVE_XCURSOR build

2005-07-10  Sebastien Bacher  <seb128@debian.org>

	* gnome-mouse-properties.c: (cursor_size_from_widget),
	(event_box_button_press_event), (cursor_theme_changed),
	(cursor_font_changed), (cursor_changed),
	(gdk_pixbuf_from_xcursor_image), (populate_tree_model),
	(setup_dialog), (create_dialog):
	* gnome-mouse-properties.glade:
	new cursor theme manager for the mouse capplet, 
	patch by Sven Herzberg <herzi@gnome-de.org> with changes 
	by Matthias Clasen <mclasen@redhat.com> (Closes: #110670).

2005-01-04  Sebastien Bacher  <seb128@debian.org>

	* gnome-mouse-properties.glade: fixed a grammar error (Closes: #131521)

2005-01-02  Sebastien Bacher  <seb128@debian.org>

	* gnome-mouse-properties.glade:
	patch from Heikki Paajanen <hepaajan@iki.fi> (based on the patch