@@ -1,3 +1,8 @@
+2005-08-31  Rodrigo Moya <rodrigo@novell.com>
+
+	* gnome-mouse-properties.c (delay_value_changed_cb): guard against
+	invalid values from the GtkHScale widget.
+
 2005-08-30  Sven Herzberg  <herzi@gnome-de.org>
 
 	* gnome-mouse-properties.c: listen to the XCURSOR_PATH environment
